--- a/cap2/css/meuestilo.css
+++ b/cap2/css/meuestilo.css
@@ -4,15 +4,26 @@ body{
   line-height: 1.6;
 }
 
+h1 a{
+  color: #7E9F19;
+  text-decoration: none;
+}
+
+h1 a:hover{
+  background-color: #7E9F19;
+  color: #fff;
+}
+
 .container {
   margin: 0 auto;
   width: 960px;
 }
 
 .place {
+  background-color: #fff;
+  border: 1px solid #ccc; 
   border-color: #CCC #999 #999 #CCC;
   border: 1px solid #CCC;
-  clear: both;
   margin-bottom: 20px;
   padding: 10px;
 }
@@ -20,4 +31,20 @@ body{
 .place h2 {
   border-bottom: 1px dashed #7E9F19;
   margin: 0;
+}
+
+.place a{
+  color: #2C88A7;
+  font-weight: bold;
+}
+
+.place img{
+  border: 1px solid #7E9F19;
+  float: left;
+  margin: 10px 10px 0 0;
+  padding: 2px;
+}
+
+.clear{
+  clear: both;
 }
