--- a/cap2/css/meuestilo.css
+++ b/cap2/css/meuestilo.css
@@ -4,6 +4,11 @@ body{
   line-height: 1.6;
 }
 
+.container {
+  margin: 0 auto;
+  width: 960px;
+}
+
 h1 a{
   color: #7E9F19;
   text-decoration: none;
@@ -14,9 +19,9 @@ h1 a:hover{
   color: #fff;
 }
 
-.container {
-  margin: 0 auto;
-  width: 960px;
+.places{
+  float: left;
+  width: 660px;
 }
 
 .place {
@@ -26,6 +31,23 @@ h1 a:hover{
   border: 1px solid #CCC;
   margin-bottom: 20px;
   padding: 10px;
+}
+
+.sidenote{
+  background-color: #FFFBE4;
+  border: 1px solid #C9BC8F;
+  float: right;
+  padding: 10px;
+  width: 260px;
+}
+
+.sidenote h3{
+  font-size: 14px;
+  margin-top: 0;
+}
+
+.sidenote ol{
+  font-size: 12px;
 }
 
 .place h2 {
@@ -47,4 +69,9 @@ h1 a:hover{
 
 .clear{
   clear: both;
+}
+
+.footer{
+  font-size: 12px;
+  text-align: center;
 }
